Added API support to GET from and POST to in-memory datastore or persisted DB using simplified audio file entities based on Entity Framework Core. Added Logging (NLog). Added simple "mail" service interface and implementations to notify of new files added to DB context. Added dummy data for in-memory datastore & seed data for persisted (local) DB. Added some keys to appsettings.json for mailTo and mailFrom addresses, and also DB context connection string. Next step is to work on File Upload widget to add actual .WAV files.

--- a/DotNetCoreSpeechToTextDemo/Properties/launchSettings.json
+++ b/DotNetCoreSpeechToTextDemo/Properties/launchSettings.json
@@ -1,7 +1,7 @@
-﻿{
+{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:63391",
       "sslPort": 44308
@@ -12,16 +12,17 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development" //"Production",
+        //"connectionStrings:audioFileDBConnectionString": "Server=myproductionserver;Database=SpeechToTextDB;UserId=DefinitelyNotSA;Password=DefinitelyNotSA;"
       }
     },
     "DotNetCoreSpeechToTextDemo": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
