--- a/DotNetCoreSpeechToTextDemo/appsettings.json
+++ b/DotNetCoreSpeechToTextDemo/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "connectionStrings": {
+    "audioFileDBConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=SpeechToTextDB;Trusted_Connection=True;"
+  },
+  "mailSettings": {
+    "mailToAddress": "developer@pbid.com",
+    "mailFromAddress": "noreply@pbid.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
