--- a/DotNetCoreSpeechToTextDemo/DotNetCoreSpeechToTextDemo.csproj
+++ b/DotNetCoreSpeechToTextDemo/DotNetCoreSpeechToTextDemo.csproj
@@ -12,12 +12,20 @@
     <PackageReference Include="Microsoft.CognitiveServices.Speech" Version="1.13.0" />
     <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="nlog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Update="Views\Home\Index - Original.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Api\" />
   </ItemGroup>
 
 </Project>
