Cognitive Services subscription key information moved to appsettings.json. Added placeholder speech RecognitionResult object to test upload function with Upload File button and JS code to handle click event. Added RESTSpeechToTextResult class to project. Added partial view to display transciption results.

--- a/DotNetCoreSpeechToTextDemo/appsettings.json
+++ b/DotNetCoreSpeechToTextDemo/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "cognitiveServiceApi": {
+    "subscriptionKey": "2efdde4787904073bc0febfdeac28465",
+    "endpoint": "https://westus2.api.cognitive.microsoft.com/sts/v1.0/issuetoken",
+    "region": "westus2"
+  },
   "connectionStrings": {
     "audioFileDBConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=SpeechToTextDB;Trusted_Connection=True;"
   },
