--- a/DotNetCoreSpeechToTextDemo/DotNetCoreSpeechToTextDemo.csproj
+++ b/DotNetCoreSpeechToTextDemo/DotNetCoreSpeechToTextDemo.csproj
@@ -22,6 +22,9 @@
     <Content Update="Views\Home\Index - Original.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Views\Home\_TranscriptionResults.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
